set(UDL_COMMON_LIBS derecho derecho::cascade pthread diskann aio)


set(COMMON_INCLUDE_DIR
  ${CMAKE_SOURCE_DIR}/extern/DiskANN/include
  ${PROJECT_SOURCE_DIR}/include/task_push
)

set(LOG_HEAD_INDEX_UDL_START 10000)
set(LOG_HEAD_INDEX_LOADING_START 10001)
set(LOG_HEAD_INDEX_LOADING_END 10002)
set(LOG_HEAD_INDEX_DESERIALIZE_START 10003)
set(LOG_HEAD_INDEX_DESERIALIZE_END 10004)
set(LOG_HEAD_INDEX_SEARCH_START 10005)
set(LOG_HEAD_INDEX_SEARCH_END 10006)
set(LOG_HEAD_INDEX_DETERMINE_CAND_Q_START 10007)
set(LOG_HEAD_INDEX_DETERMINE_CAND_Q_END 10008)
set(LOG_HEAD_INDEX_UDL_END 10009)



add_library(head_index_search_udl SHARED
  ${CMAKE_CURRENT_SOURCE_DIR}/head_index_search_udl.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/serialize_utils.cpp
)
target_include_directories(head_index_search_udl PRIVATE
  ${COMMON_INCLUDE_DIR}
)

target_compile_definitions(head_index_search_udl PRIVATE 
    DATA_TYPE="${DATA_TYPE}"
    LOG_HEAD_INDEX_UDL_START=${LOG_HEAD_INDEX_UDL_START}
    LOG_HEAD_INDEX_LOADING_START=${LOG_HEAD_INDEX_LOADING_START}
    LOG_HEAD_INDEX_LOADING_END=${LOG_HEAD_INDEX_LOADING_END}
    LOG_HEAD_INDEX_DESERIALIZE_START=${LOG_HEAD_INDEX_DESERIALIZE_START}
    LOG_HEAD_INDEX_DESERIALIZE_END=${LOG_HEAD_INDEX_DESERIALIZE_END}
    LOG_HEAD_INDEX_SEARCH_START=${LOG_HEAD_INDEX_SEARCH_START}
    LOG_HEAD_INDEX_SEARCH_END=${LOG_HEAD_INDEX_SEARCH_END}
    LOG_HEAD_INDEX_DETERMINE_CAND_Q_START=${LOG_HEAD_INDEX_DETERMINE_CAND_Q_START}
    LOG_HEAD_INDEX_DETERMINE_CAND_Q_END=${LOG_HEAD_INDEX_DETERMINE_CAND_Q_END}
    LOG_HEAD_INDEX_UDL_END=${LOG_HEAD_INDEX_UDL_END}
)
target_link_libraries(head_index_search_udl ${UDL_COMMON_LIBS} )
# target_compile_options(head_index_search_udl PRIVATE "-O3")

set(LOG_GLOBAL_INDEX_UDL_START 20001)
set(LOG_GLOBAL_INDEX_UDL_END 20002)
set(LOG_GLOBAL_INDEX_LOADING_START 20010)
set(LOG_GLOBAL_INDEX_LOADING_END 20011)
set(LOG_GLOBAL_INDEX_COMPUTE_QUERY_START 20020)
set(LOG_GLOBAL_INDEX_COMPUTE_QUERY_END 20021)
set(LOG_GLOBAL_INDEX_SEARCH_START 20030)
set(LOG_GLOBAL_INDEX_SEARCH_END 20031)
set(LOG_GLOBAL_INDEX_COMPUTE_QUERY_QUEUE_PUSHED 20040)
set(LOG_GLOBAL_INDEX_COMPUTE_GET_SCRATCH_START 20041)
set(LOG_GLOBAL_INDEX_COMPUTE_GET_SCRATCH_END 20042)
set(LOG_GLOBAL_INDEX_COMPUTE_PREP_QUERY_START 20050)
set(LOG_GLOBAL_INDEX_COMPUTE_PREP_QUERY_END 20051)
set(LOG_GLOBAL_INDEX_COMPUTE_READ_START 20060)
set(LOG_GLOBAL_INDEX_COMPUTE_READ_END 20061)
set(LOG_GLOBAL_INDEX_COMPUTE_CALC_START 20070)
set(LOG_GLOBAL_INDEX_COMPUTE_CALC_END 20071)
set(LOG_GLOBAL_INDEX_SEARCH_GET_SCRATCH_START 20080)
set(LOG_GLOBAL_INDEX_SEARCH_GET_SCRATCH_END 20081)
set(LOG_GLOBAL_INDEX_SEARCH_PREP_QUERY_START 20090)
set(LOG_GLOBAL_INDEX_SEARCH_PREP_QUERY_END 20091)
set(LOG_GLOBAL_INDEX_SEARCH_INIT_DISTANCES_START 20100)
set(LOG_GLOBAL_INDEX_SEARCH_INIT_DISTANCES_END 20101)
set(LOG_GLOBAL_INDEX_SEARCH_SEARCH_START 20110)
set(LOG_GLOBAL_INDEX_SEARCH_SEARCH_END 20111)
set(LOG_GLOBAL_INDEX_SEARCH_COMPUTE_SEND 20120)
set(LOG_GLOBAL_INDEX_SEARCH_COMPUTE_RECEIVE 20121)
set(LOG_GLOBAL_INDEX_SEARCH_READ_START 20130)
set(LOG_GLOBAL_INDEX_SEARCH_READ_END 20131)
set(LOG_GLOBAL_INDEX_SEARCH_COMPUTE_DIST_START 20140)
set(LOG_GLOBAL_INDEX_SEARCH_COMPUTE_DIST_END 20141)
set(LOG_GLOBAL_INDEX_BATCH_DESERIALIZE_START 20150)
set(LOG_GLOBAL_INDEX_BATCH_DESERIALIZE_END 20151)
set(LOG_GLOBAL_INDEX_BATCH_SEND_START 20160)
set(LOG_GLOBAL_INDEX_BATCH_SEND_END 20161)
set(LOG_GLOBAL_INDEX_BATCH_PREP_START 20170)
set(LOG_GLOBAL_INDEX_BATCH_PREP_END 20171)
set(LOG_GLOBAL_INDEX_BATCH_SERIALIZE_START 20172)
set(LOG_GLOBAL_INDEX_BATCH_SERIALIZE_END 20173)
set(LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_TO_BATCHING_START 20180)
set(LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_TO_BATCHING_END 20181)
set(LOG_GLOBAL_INDEX_BATCHING_TRANSFER_MESSAGES_START 20190)
set(LOG_GLOBAL_INDEX_BATCHING_TRANSFER_MESSAGES_END 20191)
set(LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_BATCHER 20200)
set(LOG_GLOBAL_INDEX_COMPUTE_QUERY_PUSH_BATCHER 20201)
set(LOG_GLOBAL_INDEX_SEARCH_STEP_START 20210)
set(LOG_GLOBAL_INDEX_SEARCH_STEP_END 20211)
set(LOG_GLOBAL_INDEX_UDL_HANDLER_START 20220)
set(LOG_GLOBAL_INDEX_UDL_HANDLER_END 20221)

add_library(global_search_udl SHARED
  ${CMAKE_CURRENT_SOURCE_DIR}/global_search_udl.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/serialize_utils.cpp
)
target_include_directories(global_search_udl PRIVATE ${COMMON_INCLUDE_DIR})# needed to include this to access the methods of diskann library

target_compile_definitions(global_search_udl PUBLIC 
    DATA_TYPE="${DATA_TYPE}" 
    GLOBAL_BASELINE
    LOG_GLOBAL_INDEX_UDL_START=${LOG_GLOBAL_INDEX_UDL_START}
  LOG_GLOBAL_INDEX_UDL_END=${LOG_GLOBAL_INDEX_UDL_END}
    LOG_GLOBAL_INDEX_LOADING_START=${LOG_GLOBAL_INDEX_LOADING_START}
    LOG_GLOBAL_INDEX_LOADING_END=${LOG_GLOBAL_INDEX_LOADING_END}
    LOG_GLOBAL_INDEX_COMPUTE_QUERY_START=${LOG_GLOBAL_INDEX_COMPUTE_QUERY_START}
    LOG_GLOBAL_INDEX_COMPUTE_QUERY_END=${LOG_GLOBAL_INDEX_COMPUTE_QUERY_END}
    LOG_GLOBAL_INDEX_SEARCH_START=${LOG_GLOBAL_INDEX_SEARCH_START}
    LOG_GLOBAL_INDEX_SEARCH_END=${LOG_GLOBAL_INDEX_SEARCH_END}
  LOG_GLOBAL_INDEX_COMPUTE_QUERY_QUEUE_PUSHED=${LOG_GLOBAL_INDEX_COMPUTE_QUERY_QUEUE_PUSHED}
    LOG_GLOBAL_INDEX_COMPUTE_GET_SCRATCH_START=${LOG_GLOBAL_INDEX_COMPUTE_GET_SCRATCH_START}
    LOG_GLOBAL_INDEX_COMPUTE_GET_SCRATCH_END=${LOG_GLOBAL_INDEX_COMPUTE_GET_SCRATCH_END}
    LOG_GLOBAL_INDEX_COMPUTE_PREP_QUERY_START=${LOG_GLOBAL_INDEX_COMPUTE_PREP_QUERY_START}
    LOG_GLOBAL_INDEX_COMPUTE_PREP_QUERY_END=${LOG_GLOBAL_INDEX_COMPUTE_PREP_QUERY_END}
    LOG_GLOBAL_INDEX_COMPUTE_READ_START=${LOG_GLOBAL_INDEX_COMPUTE_READ_START}
    LOG_GLOBAL_INDEX_COMPUTE_READ_END=${LOG_GLOBAL_INDEX_COMPUTE_READ_END}
    LOG_GLOBAL_INDEX_COMPUTE_CALC_START=${LOG_GLOBAL_INDEX_COMPUTE_CALC_START}
    LOG_GLOBAL_INDEX_COMPUTE_CALC_END=${LOG_GLOBAL_INDEX_COMPUTE_CALC_END}
    LOG_GLOBAL_INDEX_SEARCH_GET_SCRATCH_START=${LOG_GLOBAL_INDEX_SEARCH_GET_SCRATCH_START}
    LOG_GLOBAL_INDEX_SEARCH_GET_SCRATCH_END=${LOG_GLOBAL_INDEX_SEARCH_GET_SCRATCH_END}
    LOG_GLOBAL_INDEX_SEARCH_PREP_QUERY_START=${LOG_GLOBAL_INDEX_SEARCH_PREP_QUERY_START}
    LOG_GLOBAL_INDEX_SEARCH_PREP_QUERY_END=${LOG_GLOBAL_INDEX_SEARCH_PREP_QUERY_END}
    LOG_GLOBAL_INDEX_SEARCH_INIT_DISTANCES_START=${LOG_GLOBAL_INDEX_SEARCH_INIT_DISTANCES_START}
    LOG_GLOBAL_INDEX_SEARCH_INIT_DISTANCES_END=${LOG_GLOBAL_INDEX_SEARCH_INIT_DISTANCES_END}
    LOG_GLOBAL_INDEX_SEARCH_SEARCH_START=${LOG_GLOBAL_INDEX_SEARCH_SEARCH_START}
    LOG_GLOBAL_INDEX_SEARCH_SEARCH_END=${LOG_GLOBAL_INDEX_SEARCH_SEARCH_END}
    LOG_GLOBAL_INDEX_SEARCH_COMPUTE_SEND=${LOG_GLOBAL_INDEX_SEARCH_COMPUTE_SEND}
    LOG_GLOBAL_INDEX_SEARCH_COMPUTE_RECEIVE=${LOG_GLOBAL_INDEX_SEARCH_COMPUTE_RECEIVE}
    LOG_GLOBAL_INDEX_SEARCH_READ_START=${LOG_GLOBAL_INDEX_SEARCH_READ_START}
    LOG_GLOBAL_INDEX_SEARCH_READ_END=${LOG_GLOBAL_INDEX_SEARCH_READ_END}
    LOG_GLOBAL_INDEX_SEARCH_COMPUTE_DIST_START=${LOG_GLOBAL_INDEX_SEARCH_COMPUTE_DIST_START}
    LOG_GLOBAL_INDEX_SEARCH_COMPUTE_DIST_END=${LOG_GLOBAL_INDEX_SEARCH_COMPUTE_DIST_END}
  LOG_GLOBAL_INDEX_BATCH_DESERIALIZE_START=${LOG_GLOBAL_INDEX_BATCH_DESERIALIZE_START}
  LOG_GLOBAL_INDEX_BATCH_DESERIALIZE_END=${LOG_GLOBAL_INDEX_BATCH_DESERIALIZE_END}
  LOG_GLOBAL_INDEX_BATCH_SEND_START=${LOG_GLOBAL_INDEX_BATCH_SEND_START}
  LOG_GLOBAL_INDEX_BATCH_SEND_END=${LOG_GLOBAL_INDEX_BATCH_SEND_END}
  LOG_GLOBAL_INDEX_BATCH_PREP_START=${LOG_GLOBAL_INDEX_BATCH_PREP_START}
  LOG_GLOBAL_INDEX_BATCH_PREP_END=${LOG_GLOBAL_INDEX_BATCH_PREP_END}
  LOG_GLOBAL_INDEX_BATCH_SERIALIZE_START=${LOG_GLOBAL_INDEX_BATCH_SERIALIZE_START}
  LOG_GLOBAL_INDEX_BATCH_SERIALIZE_END=${LOG_GLOBAL_INDEX_BATCH_SERIALIZE_END}
  LOG_GLOBAL_INDEX_BATCHING_TRANSFER_MESSAGES_START=${LOG_GLOBAL_INDEX_BATCHING_TRANSFER_MESSAGES_START}
  LOG_GLOBAL_INDEX_BATCHING_TRANSFER_MESSAGES_END=${LOG_GLOBAL_INDEX_BATCHING_TRANSFER_MESSAGES_END}
  LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_TO_BATCHING_START=${LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_TO_BATCHING_START}
  LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_TO_BATCHING_END=${LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_TO_BATCHING_END}
  LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_BATCHER=${LOG_GLOBAL_INDEX_COMPUTE_RESULT_PUSH_BATCHER}
  LOG_GLOBAL_INDEX_COMPUTE_QUERY_PUSH_BATCHER=${LOG_GLOBAL_INDEX_COMPUTE_QUERY_PUSH_BATCHER}
  LOG_GLOBAL_INDEX_SEARCH_STEP_START=${LOG_GLOBAL_INDEX_SEARCH_STEP_START}
  LOG_GLOBAL_INDEX_SEARCH_STEP_END=${LOG_GLOBAL_INDEX_SEARCH_STEP_END}
  LOG_GLOBAL_INDEX_UDL_HANDLER_START=${LOG_GLOBAL_INDEX_UDL_HANDLER_START}
  LOG_GLOBAL_INDEX_UDL_HANDLER_END=${LOG_GLOBAL_INDEX_UDL_HANDLER_END}
)


target_link_libraries(global_search_udl ${UDL_COMMON_LIBS})
# target_compile_options(global_search_udl PRIVATE "-O3")

add_custom_target(update_config ALL
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/cfg ${CMAKE_BINARY_DIR}/cfg
  
  # Create node directories if they don't exist
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg/n0
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg/n1
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg/n2
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg/n3
  
  # Create cross-platform symbolic links for layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/layout.json
    ${CMAKE_BINARY_DIR}/cfg/n0/layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/layout.json
    ${CMAKE_BINARY_DIR}/cfg/n1/layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/layout.json
    ${CMAKE_BINARY_DIR}/cfg/n2/layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/layout.json
    ${CMAKE_BINARY_DIR}/cfg/n3/layout.json
    
  # Create symbolic links for dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg/n0/dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg/n1/dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg/n2/dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg/n3/dfgs.json
    
  # Create symbolic links for udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg/n0/udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg/n1/udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg/n2/udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg/n3/udl_dlls.cfg
    
  COMMENT "Setting up configuration files and symbolic links"
  VERBATIM
)


add_custom_target(update_config_rdma ALL
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/cfg_rdma ${CMAKE_BINARY_DIR}/cfg_rdma
  
  # Create node directories if they don't exist
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg_rdma/n0
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg_rdma/n1
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg_rdma/n2
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/cfg_rdma/n3
  
  # Create cross-platform symbolic links for layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/layout.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n0/layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/layout.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n1/layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/layout.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n2/layout.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/layout.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n3/layout.json
    
  # Create symbolic links for dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n0/dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n1/dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n2/dfgs.json
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/dfgs.json
    ${CMAKE_BINARY_DIR}/cfg_rdma/n3/dfgs.json
    
  # Create symbolic links for udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg_rdma/n0/udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg_rdma/n1/udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg_rdma/n2/udl_dlls.cfg
  COMMAND ${CMAKE_COMMAND} -E create_symlink 
    ${CMAKE_BINARY_DIR}/cfg_rdma/udl_dlls.cfg
    ${CMAKE_BINARY_DIR}/cfg_rdma/n3/udl_dlls.cfg
    
  COMMENT "Setting up configuration files and symbolic links"
  VERBATIM
)
